Commenting on the code

--- a/app/public/404.html
+++ b/app/public/404.html
@@ -20,6 +20,8 @@
                   setTimeout(doSlideshow,20000);
               });
           }
+
+          // Set the interval between the 404 images 
           setInterval(function()
           {
               // Remove .active class from the active li, select next li sibling.
@@ -35,7 +37,7 @@
   </head>
   <body>
     <div class="oops-wrapper">
-  	    <h3>Looks like you've scored an own goal mate... Page not found.</h3>
+  	    <h3>Looks like you've scored an own goal mate... 404 Page not found.</h3>
           <div id="cycler">
             <img class="active" src="/images/baker-own-goal.jpg" alt="My image" style="width:600px;height:400px;"/>
             <img src="/images/Oops.jpg" alt="My image" style="width:600px;height:400px;"/>    
