--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -306,6 +306,10 @@
                         <input type="button" class="button" value="Get Tweets" onclick="run();" /> 
                     </label>    
                 </form>
+                <form name="logout" action="http://localhost:8081/logout">
+                  <input type="submit" value="Log Out">
+                </form>
+
             <div id='myform_errorloc' class='error_strings'></div>
             <img src="/images/ajax-loader.gif" id="img" style="display:none"/ >
         </div>
