Bit of cleaning

--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -278,22 +278,22 @@
 
                     <label>
                         <span>Key words :</span>
-                        <input id="key" type="text" placeholder="Example: Man Utd" />
+                        <input id="keywords" name="keywords" type="text" placeholder="Example: Man Utd" />
                     </label>
 
                     <label>
                         <span>Count :</span>
-                        <input id="count" type="text" placeholder="Example: 100" min="1" max="300"/>
+                        <input id="count" name="count" type="number" placeholder="Example: 100" min="1" max="500"/>
                     </label> 
 
                     <label>
                         <span>Date :</span>
-                        <input id="message" type="text" placeholder="Example: 2011-11-11" />
+                        <input id="message" name="date" type="date" placeholder="Example: 2011-11-11" />
                     </label>
 
                     <label>
                         <span>Distance :</span>
-                        <input id="message" type="text" placeholder="Example: 100km" />
+                        <input id="message" name="distance" type="text" placeholder="Example: 100km" />
                     </label>
 
                     <label>
