--- a/app/public/register.html
+++ b/app/public/register.html
@@ -2,7 +2,7 @@
 <html class="home" lang="en">
 <html>
     <head>
-        <title>Home</title>
+        <title>Register</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
@@ -35,6 +35,9 @@
         </script>
     </head>
     <body>
+        <form class="logout" name="logout" action="http://localhost:8081/logout" style="position:fixed;right:10px;top:5px;">
+          <input type="submit" value="Log Out">
+        </form>
         <div class="index-wrapper">
             <div class="title">
                 <h2><span>Register a new user below!<span></h2>
