--- a/app/public/register.html
+++ b/app/public/register.html
@@ -35,12 +35,9 @@
         </script>
     </head>
     <body>
-        <form class="logout" name="logout" action="http://localhost:8081/logout" style="position:fixed;right:10px;top:5px;">
-          <input type="submit" value="Log Out">
-        </form>
-        <div class="index-wrapper">
+        <div class="register-wrapper">
             <div class="title">
-                <h2><span>Register a new user below!<span></h2>
+                <h3><span>Register a new user below!<span></h3>
             </div>
             <section class="registerform">
                 <form name="register" method="post" action="/register" accept-charset="utf-8">
