--- a/app/public/404.html
+++ b/app/public/404.html
@@ -6,7 +6,7 @@
   	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript">
           //Array of background images
-          var images = new Array('/images/Etihad-Stadium.jpg', '/images/emirates-stadium.jpg', '/images/Wembley.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg' ),
+          var images = new Array('/images/Etihad-Stadium.jpg', '/images/De-bruyne.jpg', '/images/emirates-stadium.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg', '/images/Wembley.jpg',  ),
               nextimage = 0;
 
           doSlideshow();
