--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -10,7 +10,7 @@
         <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA"></script>-->
         <script type="text/javascript">
             //Array of background images
-            var images = new Array('/images/Etihad-Stadium.jpg', '/images/De-bruyne.jpg', '/images/emirates-stadium.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg', '/images/Wembley.jpg',  ),
+            var images = new Array('/images/Etihad-Stadium.jpg', '/images/De-bruyne.jpg', '/images/emirates-stadium.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg', '/images/Wembley.jpg'),
                 nextimage = 0;
 
             doSlideshow();
@@ -243,7 +243,7 @@
                         <h2>First time using this form?</h2>
                         <span>+</span>
                         <div class="panel">
-                            <p>Twitter profile: This field is for specifying the twitter profile that you want to return tweets for. For example, 'MCFC' will return tweets from the offical Manchester city twitter account.<br>Key Words: This field is for specifying a key word you want the tweets returned to contain. For example, 'ref' will return all tweets that contain the word ref.<br>Count: This field is for specifying how many tweets you wish to return, note that the maximum is 300.<br>Date: This field is for specifying the date from which to get tweets from. For example, '2015-11-11' will only return tweets after the 11th of novemeber 2015.<br>Distance: This field is for specifying the distance from point in which to eturn tweets. For example, 100km will return tweets from a 100km radius of location, note that if you have entered a premier league teams twitter profile this point is set to the teams stadium.<br>Geo-location: This field is for specifying the longitude and latitude of your search of tweets, this field sets the centeral location of the radius set in the Distance field<br> Map: The map on the right hand side of the screen will display all the tweets that returned a location as a marker on the map. The map also displays the location of all the Premier League teams stadiums.</p>
+                            <p>Twitter profile: This field is for specifying the twitter profile that you want to return tweets for. For example, 'MCFC' will return tweets from the offical Manchester city twitter account.<br>Key Words: This field is for specifying a key word you want the tweets returned to contain. For example, 'ref' will return all tweets that contain the word ref.<br>Count: This field is for specifying how many tweets you wish to return, note that the maximum is 300.<br>Date: This field is for specifying the date from which to get tweets from. For example, '2015-11-11' will only return tweets after the 11th of novemeber 2015.<br>Distance: This field is for specifying the distance from point in which to eturn tweets. For example, 100km will return tweets from a 100km radius of location, note that if you have entered a premier league teams twitter profile this point is set to the teams stadium.<br>Geo-location: This field is for specifying the longitude and latitude of your search of tweets, this field sets the centeral location of the radius set in the Distance field<br> Map: The map on the right hand side of the screen will display all the tweets that returned a location as a marker on the map. The map also displays the location of all the Premier League teams stadiums.<br>Tweets: The section below the map will fill with all the relevant tweet information, based on your queries, when the form is completed and the "Get Tweets" button is pressed.<br>Extra Information: Below this form is a section that will show you the most common word in the collection of tweets returned, as well as the most active twitter users and their most commonly used words.</p>
                         </div>
                     </li>
                 </ul>
@@ -316,10 +316,13 @@
                 <img src="/images/ajax-loader.gif" id="img" style="display:none"/ >
             </div>
             <div class="right-wrapper">
-                <div id="map-canvas" style="width: 100%; height: 332px;"/>
+                <div id="map-canvas" style="width: 900px; height: 332px;"></div>
             </div>
             <div class="bottom-right">
-                <h2><span>Tweets:</span></h2>
+                <h2><span>Tweets: Display here</span></h2>
+            </div>
+            <div class="bottom-left">
+                <h2><span>Tweets: Most common words in the collection and most active users</span></h2>
             </div>
         </div>
     </body>
