--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,34 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>
-            // Array of background images
-            var images = new Array('/images/Etihad-Stadium.jpg', '/images/De-bruyne.jpg', '/images/emirates-stadium.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg', '/images/Wembley.jpg'),
-                nextimage = 0;
-
-            doSlideshow();
-
-            // Function that handles the background images slideshow
-            function doSlideshow(){
-                if (nextimage >= images.length) {nextimage=0;}
-                $('.home')
-                .css('background-image','url("'+images[nextimage++]+'")')
-                .fadeIn("slow", "swing", function(){
-                    setTimeout(doSlideshow,20000);
-                });
-            }
-
-            // Function for validating the user input in the form
-            function validateForm(){
-                var x = document.forms["login"]["username"].value;
-                if (x==null || x==""){
-                    alert("Please enter your username.")
-                    return false;
-                }
-            }
-        </script>
+        <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
     </head>
-    <body>
+    <body onLoad="doSlideshow()">
         <form class="logout" name="logout" action="http://localhost:8081/logout" style="position:fixed;right:10px;top:5px;">
             <input type="submit" value="Log Out">
         </form>
